...
            identifier: "OPEN_ACTION",
            title: "Open",
            options: [.foreground]
        )
        let dismissAllAction = UNNotificationAction(
            identifier: "DISMISS_ALL_ACTION",
            title: "Mark All as Read",
            options: []
        )
        let category = UNNotificationCategory(
            identifier: "NEW_PAPERS",
            actions: [openAction, dismissAllAction],
            intentIdentifiers: [],
...
